<resources>
  <string name="titleApplication">My Stuff</string>
  <string name="titleCategoryList">Maintain Categories</string>
  <string name="titlePropertyList">Maintain Properties</string>
  <string name="titleFreeLimitExceeded">Time to Upgrade?</string>
  <string name="titleDeleteCategory">Delete Category: %1$s</string>
  <string name="titleDeleteProperty">Delete Property: %1$s</string>
  <string name="titleSelectCategory">Select a Category</string>
  <string name="titleSelectNewCategory">Please select a new Category for the %1$d transactions currently in %2$s</string>
  <string name="menu_configure">Configure</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_add_category">Add Category</string>
  <string name="menu_add_property">Add Property</string>
  <string name="freelimit_reached">Unfortunately you have already created the maximum number of %1$s allowed in the myCashFlow Free, which has the following limits:</string>
  <string name="freelimit_scenarios">%d Scenarios</string>
  <string name="freelimit_accounts">%d Accounts</string>
  <string name="freelimit_transactions">%d Transactions (per Account per Scenario)</string>
  <string name="freelimit_demoscenario">Note that the Demo Scenario is pre-configured to exceed these limits. Be sure to try creating a new Scenario.</string>
  <string name="freelimit_upgrade">If you would like to upgrade to the full version of myCashFlow, please click the link below to visit Google Play and make your purchase.</string>
  <string name="freelimit_upgrade_link">Upgrade on Google Play</string>
  <string name="hint_category_name">Enter a name</string>
  <string name="hint_description">Enter a description</string>
  <string-array name="main_groups">
    <item>Categories</item>
    <item>Change Theme</item>
    <item>About</item>
  </string-array>
  <string-array name="main_descriptions">
    <item>Configure categories to allow items to be categorised for reporting purposes</item>
    <item>Choose a dark, light or light with dark header theme</item>
    <item>Display version and copyright details</item>
  </string-array>
</resources>