<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView
      android:id="@+id/freelimit_reached"
      style="@style/TextMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginTop="10dp"
      android:text="@string/freelimit_reached"/>
    <TextView
      android:id="@+id/freelimit_scenarios"
      style="@style/TextMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="10dp"
      android:text="@string/freelimit_scenarios"/>
    <TextView
      android:id="@+id/freelimit_accounts"
      style="@style/TextMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="5dp"
      android:text="@string/freelimit_accounts"/>
    <TextView
      android:id="@+id/freelimit_transactions"
      style="@style/TextMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="5dp"
      android:text="@string/freelimit_transactions"/>
    <TextView
      style="@style/TextMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginTop="10dp"
      android:text="@string/freelimit_demoscenario"/>
    <TextView
      style="@style/TextMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginTop="10dp"
      android:text="@string/freelimit_upgrade"/>
    <View
      android:layout_width="fill_parent"
      android:layout_height="20dp"/>
    <LinearLayout
      android:id="@+id/link_to_google_play"
      style="@style/SelectableSection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="vertical">
      <TextView
        style="@style/TextLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/freelimit_upgrade_link"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>